<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCheckData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtcheckData"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/textTitle"/>

    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullName"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/txtBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday"
        android:padding="10dp"/>


    <TextView
        android:id="@+id/txtTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone"
        android:padding="10dp"/>



    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="10dp"/>


    <TextView
        android:id="@+id/txtDescriptionContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionContact"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"/>


    <Button
        android:id="@+id/btnEditData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit"
        android:onClick="goMainActivity"/>

</LinearLayout>